--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
+ 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -37,6 +37,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  
 }
 
 #app {
@@ -44,6 +45,7 @@ h1 {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  display: flex;
 }
 
 .logo {
@@ -72,6 +74,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin: 1em;
 }
 button:hover {
   border-color: #646cff;
@@ -108,7 +111,7 @@ button:focus-visible {
 }
 
 .particle-button {
-  margin: 0 0.5em;
+  margin: 1em;
 }
 
 .particle-button:hover {
@@ -119,7 +122,10 @@ button:focus-visible {
   border-color: #f2ff00;
 }
 
-/* If you want the controller on the side */
+.fps{
+  display: flex;
+}
+
 #controller-container {
   position: fixed;
   top: 50%;
